--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,14 @@
 /*--------------------------------------------------------------
 # General Styling & Shared Classes
 --------------------------------------------------------------*/
+
+
+
+.dark-gradient {
+  background: linear-gradient(135deg, #4c859e, #698814, #2c5364);
+  color: white;
+}
+
 body {
   color: var(--default-color);
   background-color: var(--background-color);
